<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_sifu_cafe"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50sp" />

        <ImageView
            android:id="@+id/aboutImage"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corners"
            android:paddingTop="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cappuccino_image" />

        <TextView
            android:id="@+id/aboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/description"
            android:textSize="16sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="30dp"
            android:text="@string/at_sifu_cafe_we_believe_that_coffee_is_more_than_just_a_beverage_it_s_a_way_of_life_nestled_in_the_heart_of_the_city_our_coffee_shop_offers_a_warm_and_inviting_atmosphere_where_customers_can_escape_the_hustle_and_bustle_and_enjoy_the_simple_pleasure_of_a_perfect_cup_of_coffee"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dis2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="Our Coffee"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dis3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="30dp"
            android:text="@string/at_sifu_cafe_we_believe_that_coffee_is_more_than_just_a_beverage_it_s_a_way_of_life_nestled_in_the_heart_of_the_city_our_coffee_shop_offers_a_warm_and_inviting_atmosphere_where_customers_can_escape_the_hustle_and_bustle_and_enjoy_the_simple_pleasure_of_a_perfect_cup_of_coffee"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>
